--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -1,14 +1,14 @@
 services:
   app_proxy:
     environment:
-      APP_HOST: kriakiku-phantombot_phantombot_1
+      APP_HOST: kriakiku-phantombot_server_1
       APP_PORT: 25000
 
-  phantombot:
+  server:
     image: ghcr.io/phantombot/phantombot
     restart: unless-stopped
     volumes:
-      - PhantomBot_data:/opt/PhantomBot_data
+      - ${APP_DATA_DIR}/data:/opt/PhantomBot_data
     #environment:
       # If you uncomment this variable, your ENV variables will always override botlogin.txt
       # PHANTOMBOT_ENVOVERRIDE: true
