feat: added phantombot

--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     restart: unless-stopped
     volumes:
       - ${APP_DATA_DIR}/data:/opt/PhantomBot_data
-    #environment:
+    environment:
+      PHANTOMBOT_ENVOVERRIDE: true
+      PHANTOMBOT_USEHTTPS: false
+      PHANTOMBOT_PROXYBYPASSHTTPS: true
       # If you uncomment this variable, your ENV variables will always override botlogin.txt
       # PHANTOMBOT_ENVOVERRIDE: true
