--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -12,4 +12,4 @@ services:
     environment:
       PHANTOMBOT_ENVOVERRIDE: true
       PHANTOMBOT_USEHTTPS: false
-      PHANTOMBOT_PROXYBYPASSHTTPS: true
+      # PHANTOMBOT_PROXYBYPASSHTTPS: true
