feat: added phantombot

--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -14,3 +14,4 @@ services:
       PHANTOMBOT_USEHTTPS: false
       PHANTOMBOT_PROXYBYPASSHTTPS: true
       PHANTOMBOT_WSDEBUG: true
+      PHANTOMBOT_DEBUGON: true
