--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     restart: unless-stopped
     volumes:
       - ${APP_DATA_DIR}/data:/opt/PhantomBot_data
+    extra_hosts:
+      - umbrel.local:172.0.0.1
     environment:
       PHANTOMBOT_ENVOVERRIDE: true
       PHANTOMBOT_USEHTTPS: false
