feat: added phantombot

--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -15,5 +15,4 @@ services:
       PHANTOMBOT_ENVOVERRIDE: true
       PHANTOMBOT_USEHTTPS: false
       PHANTOMBOT_PROXYBYPASSHTTPS: true
-      PHANTOMBOT_WSDEBUG: true
-      PHANTOMBOT_DEBUGON: true
+      PHANTOMBOT_DEBUGON: false
