--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -16,3 +16,5 @@ services:
       PHANTOMBOT_USEHTTPS: false
       PHANTOMBOT_PROXYBYPASSHTTPS: true
       PHANTOMBOT_DEBUGON: false
+      PHANTOMBOT_PANELUSER: umbrel
+      PHANTOMBOT_PANELPASSWORD: $APP_PASSWORD
