--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       PHANTOMBOT_ENVOVERRIDE: true
       PHANTOMBOT_USEHTTPS: false
-      PHANTOMBOT_PROXYBYPASSHTTPS: true
+      PHANTOMBOT_PROXYBYPASSHTTPS: false
       PHANTOMBOT_DEBUGON: false
       PHANTOMBOT_PANELUSER: umbrel
       PHANTOMBOT_PANELPASSWORD: $APP_PASSWORD
