--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -18,5 +18,4 @@ services:
       PHANTOMBOT_DEBUGON: false
       PHANTOMBOT_PANELUSER: umbrel
       PHANTOMBOT_PANELPASSWORD: $APP_PASSWORD
-
-usedefaultdnsresolver
+      PHANTOMBOT_USEDEFAULTDNSRESOLVER: true
