--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - umbrel.local:127.0.0.1
     environment:
       PHANTOMBOT_ENVOVERRIDE: true
-      PHANTOMBOT_USEHTTPS: true
+      PHANTOMBOT_USEHTTPS: false
       # PHANTOMBOT_PROXYBYPASSHTTPS: false
       PHANTOMBOT_DEBUGON: false
       PHANTOMBOT_PANELUSER: umbrel
