feat: added phantombot

--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -18,7 +18,21 @@ services:
     environment:
       PHANTOMBOT_ENVOVERRIDE: true
       PHANTOMBOT_USEHTTPS: false
-      PHANTOMBOT_DEBUGON: false
+
+      PHANTOMBOT_DEBUGON: true
+      PHANTOMBOT_DEBUGLOG: true
+      PHANTOMBOT_IRCDEBUG: true
+      PHANTOMBOT_HELIXDEBUG: true
+      PHANTOMBOT_WSDEBUG: true
+      PHANTOMBOT_REACTORDEBUG: true
+      PHANTOMBOT_INTERNALDEBUG: true
+      PHANTOMBOT_WSPINGERDEBUG: true
+      PHANTOMBOT_EVENTSUBDEBUG: true
+      PHANTOMBOT_DNSDEBUG: true
+      PHANTOMBOT_HTTPCLIENTDEBUG: true
+      PHANTOMBOT_PATHVALIDATEDEBUG: true
+      PHANTOMBOT_RHINODEBUGGER: true
+
       PHANTOMBOT_PANELUSER: umbrel
       PHANTOMBOT_PANELPASSWORD: $APP_PASSWORD
       PHANTOMBOT_USEDEFAULTDNSRESOLVER: true
