--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/opt/PhantomBot_data
       - ${APP_DATA_DIR}/cets:/umbrel_certs
+      - ./entrypoint.sh:/umbrel_entrypoint.sh
+    entrypoint: /umbrel_entrypoint.sh
     environment:
       PHANTOMBOT_ENVOVERRIDE: true
       
