--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
-  app_proxy:
-    environment:
-      APP_HOST: kriakiku-phantombot_server_1
-      APP_PORT: 25000
+  # app_proxy:
+  #   environment:
+  #     APP_HOST: kriakiku-phantombot_server_1
+  #     APP_PORT: 25000
 
   server:
     image: ghcr.io/phantombot/phantombot
@@ -11,6 +11,19 @@ services:
       - ${APP_DATA_DIR}/entrypoint.sh:/umbrel_entrypoint.sh
       - ${APP_DATA_DIR}/data:/opt/PhantomBot_data
       - ${APP_DATA_DIR}/certs:/umbrel_certs
+    ports:
+        # The port the bot webserver listens on in the container
+        # This should not be changed, and the baseport setting in botlogin.txt should not be changed
+        # It is not necessary with Docker since this is internal to each individual container instance
+      - target: 25000
+        #
+        # The port the bot webserver will be published to on the host
+        # This is the number that should be changed, if not using Traefik, when hosting multiple bot instances on the same server
+        # If using Traefik, this should not be changed
+        published: 25000
+        #
+        # TCP protocol for HTTP. Do not change
+        protocol: tcp
     entrypoint: /umbrel_entrypoint.sh
     environment:
       PHANTOMBOT_ENVOVERRIDE: true
