--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -29,8 +29,8 @@ services:
       PHANTOMBOT_ENVOVERRIDE: true
       
       PHANTOMBOT_USEHTTPS: true
-      PHANTOMBOT_HTTPSFILENAME: /umbrel_certs/umbrel.local.pem
-      PHANTOMBOT_HTTPSKEYFILENAME: ""
+      # PHANTOMBOT_HTTPSFILENAME: /umbrel_certs/umbrel.local.pem
+      # PHANTOMBOT_HTTPSKEYFILENAME: ""
       
       PHANTOMBOT_PANELUSER: umbrel
       PHANTOMBOT_PANELPASSWORD: $APP_PASSWORD
