--- a/kriakiku-phantombot/docker-compose.yml
+++ b/kriakiku-phantombot/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data:/opt/PhantomBot_data
+      - ${APP_DATA_DIR}/public:/opt/PhantomBot/web/custom
     ports:
       - "${APP_PHANTOM_SERVER_PORT}:${APP_PHANTOM_SERVER_PORT}"
     environment:
